--- a/to_do_list/src/assets/style/Home.css
+++ b/to_do_list/src/assets/style/Home.css
@@ -1,17 +1,43 @@
 .home {
-    background-color: #bbe6e4;
+    background-color: #F6E9FD;
 
     width: 500px;
     padding: 30px 20px;
-   
+
     margin: 100px auto;
-    
+
     text-align: center;
-    
+
     font-size: 16px;
     font-family: Arial, sans-serif;
     border-radius: 10px;
-    
+
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    
+
+}
+
+.addButton {
+    width: 100px;
+    background-color: rgb(166, 166, 223);
+    padding: 10px 30px;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 12px;
+
+}
+
+.inputtext {
+    text-align: center;
+    border-radius: 10px;
+    width: 200px;
+    padding: 10px 5px;
+    font-size: 18px;
+    font-weight: 600;
+    color: rgb(213, 114, 130);
+    margin-right: 25px;
+}
+
+input:checked+.task {
+    text-decoration: line-through;
+    color: gray;
 }
