i have added a counter app along with the to do list

--- a/to_do_list/src/assets/style/Home.css
+++ b/to_do_list/src/assets/style/Home.css
@@ -1,17 +1,14 @@
 .home {
     background-color: #F6E9FD;
-
-    width: 500px;
+    width: 600px;
+    min-height: 300px;
     padding: 30px 20px;
-
     margin: 100px auto;
-
     text-align: center;
-
     font-size: 16px;
     font-family: Arial, sans-serif;
+    border: 1px solid black;
     border-radius: 10px;
-
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
 }
